--- a/tracks.yaml
+++ b/tracks.yaml
@@ -178,4 +178,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros-perception/image_pipeline.git
-    version: :{auto}
+    version: 5.0.0
+    version_saved: :{auto}
