--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8749c94
-	base = f1d02735
-	trim = 
-	trimbase = 
+	base = ff326c6f
+	trim = stereo_image_proc
+	trimbase = f1d02735
