--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8749c94
-	base = a499c1a3
-	trim = 
-	trimbase = 
+	base = d1b69367
+	trim = depth_image_proc
+	trimbase = a499c1a3
