--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8749c94
-	base = c7fa0e45
-	trim = 
-	trimbase = 
+	base = 5f09232f
+	trim = camera_calibration
+	trimbase = c7fa0e45
