--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8749c94
-	base = 796c3467
-	trim = 
-	trimbase = 
+	base = 60942dd7
+	trim = image_view
+	trimbase = 796c3467
