--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8749c94
-	base = 8e617f93
-	trim = 
-	trimbase = 
+	base = 3e5d6614
+	trim = image_pipeline
+	trimbase = 8e617f93
