--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8749c94
-	base = 97b9a1b3
-	trim = 
-	trimbase = 
+	base = 67d21dea
+	trim = image_rotate
+	trimbase = 97b9a1b3
