--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8749c94
-	base = 05302e47
-	trim = 
-	trimbase = 
+	base = c7863647
+	trim = image_publisher
+	trimbase = 05302e47
