--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8749c94
-	base = 2e5dcec3
-	trim = 
-	trimbase = 
+	base = d883f411
+	trim = image_proc
+	trimbase = 2e5dcec3
