--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8749c94
-	base = 26eb33b5
-	trim = 
-	trimbase = 
+	base = ae9a7922
+	trim = tracetools_image_pipeline
+	trimbase = 26eb33b5
