--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/image_pipeline
-	previous = 
-	base = 3e5d6614
+	previous = 3e5d6614
+	base = 14795026
 	trim = 
 	trimbase = 
