--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/image_pipeline
-	previous = 
-	base = 3f9633a6
+	previous = 3f9633a6
+	base = 1e1c454e
 	trim = 
 	trimbase = 
