--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/image_publisher
-	previous = 
-	base = c7863647
+	previous = c7863647
+	base = 24352ebf
 	trim = 
 	trimbase = 
