--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/image_publisher
-	previous = 
-	base = 5f5ae7ae
+	previous = 5f5ae7ae
+	base = 0dfab42d
 	trim = 
 	trimbase = 
