--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/depth_image_proc
-	previous = 
-	base = d1b69367
+	previous = d1b69367
+	base = 7344c4ec
 	trim = 
 	trimbase = 
