--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/depth_image_proc
-	previous = 
-	base = 317c7d36
+	previous = 317c7d36
+	base = 67e22187
 	trim = 
 	trimbase = 
