--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/image_rotate
-	previous = 
-	base = 67d21dea
+	previous = 67d21dea
+	base = ef8e661b
 	trim = 
 	trimbase = 
