--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/image_rotate
-	previous = 
-	base = 09483074
+	previous = 09483074
+	base = 3753f890
 	trim = 
 	trimbase = 
