--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/camera_calibration
-	previous = 
-	base = 5f09232f
+	previous = 5f09232f
+	base = 032f5082
 	trim = 
 	trimbase = 
