--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/camera_calibration
-	previous = 
-	base = 3993eb56
+	previous = 3993eb56
+	base = 2e91e97a
 	trim = 
 	trimbase = 
