--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/stereo_image_proc
-	previous = 
-	base = 16df3e3d
+	previous = 16df3e3d
+	base = c3885b6e
 	trim = 
 	trimbase = 
