--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/tracetools_image_pipeline
-	previous = 
-	base = ae9a7922
+	previous = ae9a7922
+	base = 19abde16
 	trim = 
 	trimbase = 
