--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/tracetools_image_pipeline
-	previous = 
-	base = ae8d266c
+	previous = ae8d266c
+	base = f3c8b9b9
 	trim = 
 	trimbase = 
