--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/image_view
-	previous = 
-	base = 60942dd7
+	previous = 60942dd7
+	base = 3e51f2ad
 	trim = 
 	trimbase = 
