--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/image_view
-	previous = 
-	base = 3440f4e0
+	previous = 3440f4e0
+	base = 60039210
 	trim = 
 	trimbase = 
