--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/image_proc
-	previous = 
-	base = d883f411
+	previous = d883f411
+	base = 6b051e73
 	trim = 
 	trimbase = 
