--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/image_proc
-	previous = 
-	base = ae11f291
+	previous = ae11f291
+	base = b7293a5c
 	trim = 
 	trimbase = 
