--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/image_publisher
-	previous = 
-	base = a1ae4902
+	previous = a1ae4902
+	base = b47568c3
 	trim = 
 	trimbase = 
