--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/image_view
-	previous = 
-	base = c286a80f
+	previous = c286a80f
+	base = 3f57e8ad
 	trim = 
 	trimbase = 
