--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/stereo_image_proc
-	previous = 
-	base = ff326c6f
+	previous = ff326c6f
+	base = e9f4b395
 	trim = 
 	trimbase = 
