--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/stereo_image_proc
-	previous = 
-	base = e8518042
+	previous = e8518042
+	base = f82d3272
 	trim = 
 	trimbase = 
