--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/tracetools_image_pipeline
-	previous = 
-	base = 3141da49
+	previous = 3141da49
+	base = c691e649
 	trim = 
 	trimbase = 
