--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/image_rotate
-	previous = 
-	base = dbd6dc21
+	previous = dbd6dc21
+	base = e7f24d05
 	trim = 
 	trimbase = 
