--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/image_proc
-	previous = 
-	base = 75b4e9f7
+	previous = 75b4e9f7
+	base = e15793bb
 	trim = 
 	trimbase = 
