--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/camera_calibration
-	previous = 
-	base = 691e64c8
+	previous = 691e64c8
+	base = 202902b3
 	trim = 
 	trimbase = 
