--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/depth_image_proc
-	previous = 
-	base = fa6c98c8
+	previous = fa6c98c8
+	base = dead2c1c
 	trim = 
 	trimbase = 
