--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/image_pipeline
-	previous = 
-	base = 68e8b1b4
+	previous = 68e8b1b4
+	base = 6d92b03f
 	trim = 
 	trimbase = 
